# ITKWikiExamples

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  DistanceBetweenPoints.cxx  ExampleCodeToWikiPage.html  InsertDoxygenLink  IntensityWindowingImageFilter.cxx  QuickView.cxx  QuickViewDemo.cxx  README  README.md  README.rst  SyncRepoWithWiki.cygwin.sh  SyncRepoWithWiki.sh  WikiExamples.remote.cmake  azure-pipelines.yml  itk-module-init.cmake  itk-module.cmake
EdgesAndGradients/: BinaryBoundaries.cxx  BinaryContourImageFilter.cxx  CMakeLists.txt  DerivativeImageFilter.cxx  GradientMagnitudeImageFilter.cxx  GradientMagnitudeRecursiveGaussianImageFilter.cxx  GradientRecursiveGaussianImageFilter.cxx  LaplacianRecursiveGaussianImageFilter.cxx  RecursiveGaussianImageFilter.cxx  SobelEdgeDetectionImageFilter.cxx  ZeroCrossingBasedEdgeDetectionImageFilter.cxx
Functions/: CMakeLists.txt  GaussianBlurImageFunction.cxx  GaussianBlurImageFunctionFilter.cxx  MedianImageFunction.cxx  NeighborhoodOperatorImageFunction.cxx
IO/: CMakeLists.txt  CreateImages.cxx  DisplayAnImage.cxx  ImageFileReader.cxx  ImageFileWriter.cxx  ImageToVTKImageFilter.cxx  ImportImageFilter.cxx  ReadUnknownImageType.cxx  ReadVectorImage.cxx  RegisterTransform.cxx  TIFFImageIO.cxx  TransformFileReader.cxx  TransformFileWriter.cxx  VolumeFromSlices.cxx  itkVtkImageConvert.cxx  itkVtkImageConvertDICOM.cxx
ImageProcessing/: AbsImageFilter.cxx  AbsoluteValueDifferenceImageFilter.cxx  AdaptiveHistogramEqualizationImageFilter.cxx  AddConstantToImageFilter.cxx  AddImageFilter.cxx  AddPixelAccessor.cxx  AndImageFilter.cxx  ApproximateSignedDistanceMapImageFilter.cxx  BinaryFunctorImageFilter.cxx  BinaryFunctorImageFilterCustom.cxx  BinaryImageToLabelMapFilter.cxx  BinaryImageToShapeLabelMapFilter.cxx  BinaryNotImageFilter.cxx  BinaryStatisticsOpeningImageFilter.cxx  BinaryThinningImageFilter.cxx  BinaryThresholdImageFilter.cxx  CMakeLists.txt  CastImageFilter.cxx  ClampImageFilter.cxx  Compose3DCovariantVectorImageFilter.cxx  ConnectedComponentImageFilter.cxx  ConvolutionImageFilter.cxx  CropImageFilter.cxx  CurvatureFlowImageFilter.cxx  DanielssonDistanceMapImageFilter.cxx  DivideImageFilter.cxx  ExtractImageFilter.cxx  FastChamferDistanceImageFilter.cxx  HammingWindowFunction.cxx  ImageAdaptorExtractVectorComponent.cxx  ImageFilterOnARegion.cxx  IntensityWindowingImageFilter.cxx  InvertIntensityImageFilter.cxx  LabelGeometryImageFilter.cxx  LabelMapOverlayImageFilter.cxx  LabelMapToLabelImageFilter.cxx  LabelOverlayImageFilter.cxx  LabelShapeKeepNObjectsImageFilter.cxx  LabelStatisticsImageFilter.cxx  LaplacianImageFilter.cxx  (+52 more)
ImageSegmentation/: CMakeLists.txt  ConfidenceConnectedImageFilter.cxx  ExtractContourWithSnakes.cxx  ExtractLargestConnectedComponentFromBinaryImage.cxx  LabelContourImageFilter.cxx  LabelImageToLabelMapFilter.cxx  LabelImageToShapeLabelMapFilter.cxx
Images/: AbsImageFilter.cxx  AddImageFilter.cxx  BilateralImageFilter.cxx  BinaryContourImageFilter.cxx  BinaryThresholdImageFilter.cxx  CMakeLists.txt  CannyEdgeDetectionImageFilter.cxx  ConnectedComponentImageFilter.cxx  ConstNeighborhoodIterator.cxx  ConstantBoundaryCondition.cxx  ConstantPadImageFilter.cxx  ConvertPixelBuffer.cxx  CropImageFilter.cxx  DerivativeImageFilter.cxx  DiscreteGaussianImageFilter.cxx  FFTNormalizedCorrelationImageFilter.cxx  FlatStructuringElement.cxx  FlipImageFilter.cxx  GradientMagnitudeImageFilter.cxx  GradientMagnitudeRecursiveGaussianImageFilter.cxx  ImageRegion.cxx  Index.cxx  InvertIntensityImageFilter.cxx  LaplacianRecursiveGaussianImageFilter.cxx  LinearInterpolateImageFunction.cxx  MaskNeighborhoodOperatorImageFilter.cxx  MaskedFFTNormalizedCorrelationImageFilter.cxx  MeanImageFilter.cxx  MedianImageFilter.cxx  MirrorPadImageFilter.cxx  MultiplyImageFilter.cxx  NeighborhoodOperatorImageFilter.cxx  NormalizeImageFilter.cxx  NormalizedCorrelationImageFilter.cxx  PasteImageFilter.cxx  PermuteAxesImageFilter.cxx  RecursiveGaussianImageFilter.cxx  RescaleIntensityImageFilter.cxx  SetPixels.cxx  ShrinkImageFilter.cxx  (+9 more)
Iterators/: CMakeLists.txt  ConstNeighborhoodIterator.cxx  ConstantBoundaryCondition.cxx  ImageBoundaryFacesCalculator.cxx  ImageRandomConstIteratorWithIndex.cxx  ImageRandomNonRepeatingConstIteratorWithIndex.cxx  ImageRegionConstIterator.cxx  ImageRegionConstIteratorWithIndex.cxx  ImageRegionExclusionConstIteratorWithIndex.cxx  ImageRegionIterator.cxx  ImageRegionIteratorWithIndex.cxx  LineConstIterator.cxx  LineIterator.cxx  NeighborhoodIterator.cxx  ShapedNeighborhoodIterator.cxx  ShapedNeighborhoodIteratorManual.cxx  ShapedNeighborhoodIterator_Manual.cxx
ItkVtkGlue/: CMakeLists.txt  GenerateItkVtkGlueConfig.cmake  ItkVtkGlueConfig.cmake.in  QuickView.cxx  QuickView.h  UseItkVtkGlue.cmake.in  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.txx  vtkCaptureScreen.h
Meshes/: AddPointsAndEdges.cxx  AreaAndVolume.cxx  CMakeLists.txt  ConvertToVTK.cxx  LoopTriangleCellSubdivision.cxx  PointAndCellData.cxx  QuadEdgeMeshNormalFilter.cxx  QuadEdgeMeshParameterizationFilter.cxx  ReadWrite.cxx
Morphology/: BinaryBallStructuringElement.cxx  BinaryDilateImageFilter.cxx  BinaryErodeImageFilter.cxx  BinaryMorphologicalClosingImageFilter.cxx  BinaryMorphologicalOpeningImageFilter.cxx  BinaryPruningImageFilter.cxx  CMakeLists.txt  FlatStructuringElement.cxx  FlatStructuringElementForegroundHasAccurateArea.cxx  FlatStructuringElementRadiusIsParametric.cxx  GrayscaleDilateImageFilter.cxx  GrayscaleErodeImageFilter.cxx
Operators/: BackwardDifferenceOperator.cxx  CMakeLists.txt  DerivativeOperator.cxx  ForwardDifferenceOperator.cxx  GaussianDerivativeOperator.cxx  GaussianOperator.cxx  LaplacianOperator.cxx  SobelOperator.cxx
PointSet/: BoundingBox.cxx  CMakeLists.txt  CreatePointSet.cxx  ReadPointSet.cxx  WritePointSet.cxx
Registration/: CMakeLists.txt  DeformationFieldTransform.cxx  ExhaustiveOptimizer.cxx  ImageRegistrationMethod.cxx  ImageRegistrationMethodAffine.cxx  ImageRegistrationMethodBSpline.cxx  LandmarkBasedTransformInitializer.cxx  LandmarkBasedTransformInitializer.py  MutualInformation.cxx  (+3 more)
(+631 files in other folders)
